[package]
name = "repkg"
version = "0.1.0"
edition = "2021"
description = "Wallpaper Engine PKG/TEX 解包与转换工具（Rust 移植）"
license = "MIT"
repository = "https://github.com/1m188/repkg-go"

[[bin]]
name = "repkg"
path = "src/main.rs"

[lib]
name = "repkg"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
lz4_flex = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
byteorder = "1"
thiserror = "2"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
